logs/slurm/25749966.err

=====================================================================
This module is only for creating or activating Python environments:
$ mamba create -n myenv -c conda-forge python=3 <package_name>
$ source activate myenv

Only run "pip install" after activating an environment.
Running pip without activating an environment is known to cause issues.

To list available environments:
$ mamba info --envs

Other uses are not tested. More info: https://links.asu.edu/solpy
=====================================================================

  
  File "/home/nstrombe/school/eee598-gen-ai/AT_Diff/scripts/points_train.py", line 7
    from datasets.2DGaussian import load_data_points
                  ^
SyntaxError: invalid decimal literal
